# homeworkweb6

./: README.md  main.py  pyproject.toml  query1.sql  query10.sql  query2.sql  query3.sql  query5.sql  query6.sql  query7.sql  query8.sql  query9.sql
